force-app/main/default/objects/Product2/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCORD</fullName>
            </value>
            <value>
                <fullName>ACODE</fullName>
            </value>
            <value>
                <fullName>ADICON</fullName>
            </value>
            <value>
                <fullName>ADN</fullName>
            </value>
            <value>
                <fullName>AKEMI</fullName>
            </value>
            <value>
                <fullName>ALAPLANA</fullName>
            </value>
            <value>
                <fullName>AMERICAN STANDARD</fullName>
            </value>
            <value>
                <fullName>ANTIEK</fullName>
            </value>
            <value>
                <fullName>APARICI</fullName>
            </value>
            <value>
                <fullName>ARTIZE</fullName>
            </value>
            <value>
                <fullName>ASTILA</fullName>
            </value>
            <value>
                <fullName>AUGA</fullName>
            </value>
            <value>
                <fullName>BALDOCER</fullName>
            </value>
            <value>
                <fullName>BENESOL</fullName>
            </value>
            <value>
                <fullName>BIANA</fullName>
            </value>
            <value>
                <fullName>BLUEGRESS</fullName>
            </value>
            <value>
                <fullName>BNA</fullName>
            </value>
            <value>
                <fullName>BODE</fullName>
            </value>
            <value>
                <fullName>BRIZO</fullName>
            </value>
            <value>
                <fullName>CARYSIL</fullName>
            </value>
            <value>
                <fullName>CATALANO</fullName>
            </value>
            <value>
                <fullName>COCOBELLA</fullName>
            </value>
            <value>
                <fullName>COLORTILE</fullName>
            </value>
            <value>
                <fullName>COSINA</fullName>
            </value>
            <value>
                <fullName>DAUGRES</fullName>
            </value>
            <value>
                <fullName>DECUS</fullName>
            </value>
            <value>
                <fullName>DEJIA</fullName>
            </value>
            <value>
                <fullName>DELTA</fullName>
            </value>
            <value>
                <fullName>ELMOLINO</fullName>
            </value>
            <value>
                <fullName>ENDURA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>