force-app/main/default/objects/Product2/fields/In_Stock__c.field-meta.xml
<CustomField>
    <fullName>In_Stock__c</fullName>
    <label>In-Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>