force-app/main/default/objects/Product2/fields/MSP__c.field-meta.xml
<CustomField>
    <fullName>MSP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>