force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADHESIVE</fullName>
            </value>
            <value>
                <fullName>FITTINGS</fullName>
            </value>
            <value>
                <fullName>GLSBRK</fullName>
            </value>
            <value>
                <fullName>INSTAL</fullName>
            </value>
            <value>
                <fullName>LAYING</fullName>
            </value>
            <value>
                <fullName>LIGHTS</fullName>
            </value>
            <value>
                <fullName>N.STONE</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
            <value>
                <fullName>PAINT</fullName>
            </value>
            <value>
                <fullName>ROOFTILE</fullName>
            </value>
            <value>
                <fullName>SANITARY</fullName>
            </value>
            <value>
                <fullName>SURFACE</fullName>
            </value>
            <value>
                <fullName>TILE</fullName>
            </value>
            <value>
                <fullName>WOODTILE</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>