force-app/main/default/objects/Product2/fields/Product_Launched__c.field-meta.xml
<CustomField>
    <fullName>Product_Launched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product_Launched</label>
    <type>Checkbox</type>
</CustomField>