force-app/main/default/objects/Product2/fields/Quantity_per_box__c.field-meta.xml
<CustomField>
    <fullName>Quantity_per_box__c</fullName>
    <label>Quantity per box</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>