force-app/main/default/objects/Product2/fields/Sqft_Piece__c.field-meta.xml
<CustomField>
    <fullName>Sqft_Piece__c</fullName>
    <label>Sqft/Piece</label>
    <length>255</length>
    <type>Text</type>
</CustomField>