force-app/main/default/objects/Product2/fields/Type_of_Finish__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Finish__c</fullName>
    <label>Type of Finish</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Matt</fullName>
            </value>
            <value>
                <fullName>Glossy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>