force-app/main/default/objects/Product2/fields/U_ProductName__c.field-meta.xml
<CustomField>
    <fullName>U_ProductName__c</fullName>
    <label>U_ProductName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>