force-app/main/default/objects/Product2/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <label>Warranty</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>