force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Category__c</columns>
    <columns>Product_Price__c</columns>
    <columns>Sqft_Piece__c</columns>
    <columns>Product_Code__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>MSP__c</columns>
    <columns>Brand__c</columns>
    <columns>Warranty__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Category__c</field>
        <operation>equals</operation>
        <value>N.STONE</value>
    </filters>
    <label>All Products</label>
</ListView>