force-app/main/default/objects/Product2/listViews/Tile_Products.listView-meta.xml
<ListView>
    <fullName>Tile_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Sqft_Piece__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Category__c</field>
        <operation>equals</operation>
        <value>TILE</value>
    </filters>
    <label>Tile Products</label>
</ListView>