force-app/main/default/objects/Product2/listViews/Todays.listView-meta.xml
<ListView>
    <fullName>Todays</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Category__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>PRODUCT2.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays</label>
</ListView>